lib/parser.js
module.exports = (function(){
  /*
   * Generated by PEG.js 0.7.0.
   *
   * http://pegjs.majda.cz/
   */
  
  function quote(s) {
    /*
     * ECMA-262, 5th ed., 7.8.4: All characters may appear literally in a
     * string literal except for the closing quote character, backslash,
     * carriage return, line separator, paragraph separator, and line feed.
     * Any character may appear in the form of an escape sequence.
     *
     * For portability, we also escape escape all control and non-ASCII
     * characters. Note that "\0" and "\v" escape sequences are not used
     * because JSHint does not like the first and IE the second.
     */
     return '"' + s
      .replace(/\\/g, '\\\\')  // backslash
      .replace(/"/g, '\\"')    // closing quote character
      .replace(/\x08/g, '\\b') // backspace
      .replace(/\t/g, '\\t')   // horizontal tab
      .replace(/\n/g, '\\n')   // line feed
      .replace(/\f/g, '\\f')   // form feed
      .replace(/\r/g, '\\r')   // carriage return
      .replace(/[\x00-\x07\x0B\x0E-\x1F\x80-\uFFFF]/g, escape)
      + '"';
  }
  
  var result = {
    /*
     * Parses the input with a generated parser. If the parsing is successfull,
     * returns a value explicitly or implicitly specified by the grammar from
     * which the parser was generated (see |PEG.buildParser|). If the parsing is
     * unsuccessful, throws |PEG.parser.SyntaxError| describing the error.
     */
    parse: function(input, startRule) {
      var parseFunctions = {
        "resources": parse_resources,
        "resource": parse_resource,
        "article": parse_article,
        "hasPropertiesFrom": parse_hasPropertiesFrom,
        "ancestorList": parse_ancestorList,
        "ancestor": parse_ancestor,
        "isAbstract": parse_isAbstract,
        "resourceName": parse_resourceName,
        "securityStatements": parse_securityStatements,
        "securityStatement": parse_securityStatement,
        "actionList": parse_actionList,
        "action": parse_action,
        "roleList": parse_roleList,
        "role": parse_role,
        "roleName": parse_roleName,
        "attributeList": parse_attributeList,
        "attribute": parse_attribute,
        "hasA": parse_hasA,
        "which": parse_which,
        "featureList": parse_featureList,
        "feature": parse_feature,
        "is": parse_is,
        "isA": parse_isA,
        "isNot": parse_isNot,
        "has": parse_has,
        "isNotRequired": parse_isNotRequired,
        "required": parse_required,
        "maxValue": parse_maxValue,
        "minValue": parse_minValue,
        "maxLength": parse_maxLength,
        "minLength": parse_minLength,
        "type": parse_type,
        "encrypted": parse_encrypted,
        "allowedValues": parse_allowedValues,
        "allowedValueList": parse_allowedValueList,
        "allowedValue": parse_allowedValue,
        "value": parse_value,
        "indexed": parse_indexed,
        "searched": parse_searched,
        "widget": parse_widget,
        "component": parse_component,
        "input": parse_input,
        "withDefaultValue": parse_withDefaultValue,
        "readonly": parse_readonly,
        "hidden": parse_hidden,
        "email": parse_email,
        "address": parse_address,
        "phone": parse_phone,
        "textarea": parse_textarea,
        "select": parse_select,
        "radio": parse_radio,
        "checkbox": parse_checkbox,
        "attributeName": parse_attributeName
      };
      
      if (startRule !== undefined) {
        if (parseFunctions[startRule] === undefined) {
          throw new Error("Invalid rule name: " + quote(startRule) + ".");
        }
      } else {
        startRule = "resources";
      }
      
      var pos = 0;
      var reportFailures = 0;
      var rightmostFailuresPos = 0;
      var rightmostFailuresExpected = [];
      
      function padLeft(input, padding, length) {
        var result = input;
        
        var padLength = length - input.length;
        for (var i = 0; i < padLength; i++) {
          result = padding + result;
        }
        
        return result;
      }
      
      function escape(ch) {
        var charCode = ch.charCodeAt(0);
        var escapeChar;
        var length;
        
        if (charCode <= 0xFF) {
          escapeChar = 'x';
          length = 2;
        } else {
          escapeChar = 'u';
          length = 4;
        }
        
        return '\\' + escapeChar + padLeft(charCode.toString(16).toUpperCase(), '0', length);
      }
      
      function matchFailed(failure) {
        if (pos < rightmostFailuresPos) {
          return;
        }
        
        if (pos > rightmostFailuresPos) {
          rightmostFailuresPos = pos;
          rightmostFailuresExpected = [];
        }
        
        rightmostFailuresExpected.push(failure);
      }
      
      function parse_resources() {
        var result0, result1;
        var pos0;
        
        pos0 = pos;
        result1 = parse_resource();
        if (result1 !== null) {
          result0 = [];
          while (result1 !== null) {
            result0.push(result1);
            result1 = parse_resource();
          }
        } else {
          result0 = null;
        }
        if (result0 !== null) {
          result0 = (function(offset, resources) { return resourceMap; })(pos0, result0);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_resource() {
        var result0, result1, result2, result3, result4, result5;
        var pos0, pos1;
        
        pos0 = pos;
        result0 = [];
        if (input.charCodeAt(pos) === 10) {
          result1 = "\n";
          pos++;
        } else {
          result1 = null;
          if (reportFailures === 0) {
            matchFailed("\"\\n\"");
          }
        }
        while (result1 !== null) {
          result0.push(result1);
          if (input.charCodeAt(pos) === 10) {
            result1 = "\n";
            pos++;
          } else {
            result1 = null;
            if (reportFailures === 0) {
              matchFailed("\"\\n\"");
            }
          }
        }
        if (result0 !== null) {
          result1 = parse_article();
          if (result1 !== null) {
            pos1 = pos;
            result3 = parse_resourceName();
            if (result3 !== null) {
              result2 = [];
              while (result3 !== null) {
                result2.push(result3);
                result3 = parse_resourceName();
              }
            } else {
              result2 = null;
            }
            if (result2 !== null) {
              result2 = (function(offset, resourceName) { resource = { securityMap: {view: {all: 1}, collect: { all: 1}, create: {all: 1}, update: {all: 1}, delete: {noone: 1}}, ancestorList: [], attributeList:[] }; resource.name = resourceName.join('');
            resourceMap[resource.name] = resource;})(pos1, result2);
            }
            if (result2 === null) {
              pos = pos1;
            }
            if (result2 !== null) {
              result3 = parse_isAbstract();
              if (result3 === null) {
                result3 = parse_hasPropertiesFrom();
              }
              result3 = result3 !== null ? result3 : "";
              if (result3 !== null) {
                result4 = parse_attributeList();
                result4 = result4 !== null ? result4 : "";
                if (result4 !== null) {
                  result5 = parse_securityStatements();
                  result5 = result5 !== null ? result5 : "";
                  if (result5 !== null) {
                    result0 = [result0, result1, result2, result3, result4, result5];
                  } else {
                    result0 = null;
                    pos = pos0;
                  }
                } else {
                  result0 = null;
                  pos = pos0;
                }
              } else {
                result0 = null;
                pos = pos0;
              }
            } else {
              result0 = null;
              pos = pos0;
            }
          } else {
            result0 = null;
            pos = pos0;
          }
        } else {
          result0 = null;
          pos = pos0;
        }
        return result0;
      }
      
      function parse_article() {
        var result0;
        
        if (input.substr(pos, 3) === "An ") {
          result0 = "An ";
          pos += 3;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\"An \"");
          }
        }
        if (result0 === null) {
          if (input.substr(pos, 3) === "an ") {
            result0 = "an ";
            pos += 3;
          } else {
            result0 = null;
            if (reportFailures === 0) {
              matchFailed("\"an \"");
            }
          }
          if (result0 === null) {
            if (input.substr(pos, 2) === "A ") {
              result0 = "A ";
              pos += 2;
            } else {
              result0 = null;
              if (reportFailures === 0) {
                matchFailed("\"A \"");
              }
            }
            if (result0 === null) {
              if (input.substr(pos, 2) === "a ") {
                result0 = "a ";
                pos += 2;
              } else {
                result0 = null;
                if (reportFailures === 0) {
                  matchFailed("\"a \"");
                }
              }
            }
          }
        }
        return result0;
      }
      
      function parse_hasPropertiesFrom() {
        var result0, result1;
        var pos0;
        
        pos0 = pos;
        if (input.substr(pos, 20) === " has properties from") {
          result0 = " has properties from";
          pos += 20;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\" has properties from\"");
          }
        }
        if (result0 !== null) {
          result1 = parse_ancestorList();
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos0;
          }
        } else {
          result0 = null;
          pos = pos0;
        }
        return result0;
      }
      
      function parse_ancestorList() {
        var result0, result1, result2, result3;
        var pos0, pos1;
        
        pos0 = pos;
        if (input.charCodeAt(pos) === 32) {
          result0 = " ";
          pos++;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\" \"");
          }
        }
        if (result0 !== null) {
          result1 = parse_ancestor();
          if (result1 !== null) {
            pos1 = pos;
            if (input.substr(pos, 4) === " and") {
              result2 = " and";
              pos += 4;
            } else {
              result2 = null;
              if (reportFailures === 0) {
                matchFailed("\" and\"");
              }
            }
            if (result2 !== null) {
              result3 = parse_ancestorList();
              if (result3 !== null) {
                result2 = [result2, result3];
              } else {
                result2 = null;
                pos = pos1;
              }
            } else {
              result2 = null;
              pos = pos1;
            }
            result2 = result2 !== null ? result2 : "";
            if (result2 !== null) {
              result0 = [result0, result1, result2];
            } else {
              result0 = null;
              pos = pos0;
            }
          } else {
            result0 = null;
            pos = pos0;
          }
        } else {
          result0 = null;
          pos = pos0;
        }
        return result0;
      }
      
      function parse_ancestor() {
        var result0, result1, result2;
        var pos0, pos1;
        
        pos0 = pos;
        result0 = parse_article();
        if (result0 !== null) {
          pos1 = pos;
          result2 = parse_resourceName();
          if (result2 !== null) {
            result1 = [];
            while (result2 !== null) {
              result1.push(result2);
              result2 = parse_resourceName();
            }
          } else {
            result1 = null;
          }
          if (result1 !== null) {
            result1 = (function(offset, ancestor) {resource.ancestorList.push(ancestor.join(''));})(pos1, result1);
          }
          if (result1 === null) {
            pos = pos1;
          }
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos0;
          }
        } else {
          result0 = null;
          pos = pos0;
        }
        return result0;
      }
      
      function parse_isAbstract() {
        var result0;
        var pos0;
        
        pos0 = pos;
        if (input.substr(pos, 12) === " is abstract") {
          result0 = " is abstract";
          pos += 12;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\" is abstract\"");
          }
        }
        if (result0 !== null) {
          result0 = (function(offset, isAbstract) { resource.isAbstract = true; })(pos0, result0);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_resourceName() {
        var result0, result1, result2, result3;
        var pos0, pos1;
        
        pos0 = pos;
        pos1 = pos;
        if (input.charCodeAt(pos) === 32) {
          result0 = " ";
          pos++;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\" \"");
          }
        }
        result0 = result0 !== null ? result0 : "";
        if (result0 !== null) {
          if (/^[A-Z]/.test(input.charAt(pos))) {
            result1 = input.charAt(pos);
            pos++;
          } else {
            result1 = null;
            if (reportFailures === 0) {
              matchFailed("[A-Z]");
            }
          }
          if (result1 !== null) {
            if (/^[a-z0-9]/.test(input.charAt(pos))) {
              result3 = input.charAt(pos);
              pos++;
            } else {
              result3 = null;
              if (reportFailures === 0) {
                matchFailed("[a-z0-9]");
              }
            }
            if (result3 !== null) {
              result2 = [];
              while (result3 !== null) {
                result2.push(result3);
                if (/^[a-z0-9]/.test(input.charAt(pos))) {
                  result3 = input.charAt(pos);
                  pos++;
                } else {
                  result3 = null;
                  if (reportFailures === 0) {
                    matchFailed("[a-z0-9]");
                  }
                }
              }
            } else {
              result2 = null;
            }
            if (result2 !== null) {
              result0 = [result0, result1, result2];
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, resourceNamePrefixSpace, resourceNameHead, resourceNameTail) { return resourceNamePrefixSpace + resourceNameHead + resourceNameTail.join(''); })(pos0, result0[0], result0[1], result0[2]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_securityStatements() {
        var result0, result1;
        
        result1 = parse_securityStatement();
        if (result1 !== null) {
          result0 = [];
          while (result1 !== null) {
            result0.push(result1);
            result1 = parse_securityStatement();
          }
        } else {
          result0 = null;
        }
        return result0;
      }
      
      function parse_securityStatement() {
        var result0, result1, result2, result3;
        var pos0, pos1;
        
        pos0 = pos;
        pos1 = pos;
        if (input.substr(pos, 8) === "\ncan be ") {
          result0 = "\ncan be ";
          pos += 8;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\"\\ncan be \"");
          }
        }
        if (result0 !== null) {
          result0 = (function(offset, canBe) {actionList = []; })(pos1, result0);
        }
        if (result0 === null) {
          pos = pos1;
        }
        if (result0 !== null) {
          result1 = parse_actionList();
          if (result1 !== null) {
            if (input.substr(pos, 4) === " by ") {
              result2 = " by ";
              pos += 4;
            } else {
              result2 = null;
              if (reportFailures === 0) {
                matchFailed("\" by \"");
              }
            }
            if (result2 !== null) {
              result3 = parse_roleList();
              if (result3 !== null) {
                result0 = [result0, result1, result2, result3];
              } else {
                result0 = null;
                pos = pos0;
              }
            } else {
              result0 = null;
              pos = pos0;
            }
          } else {
            result0 = null;
            pos = pos0;
          }
        } else {
          result0 = null;
          pos = pos0;
        }
        return result0;
      }
      
      function parse_actionList() {
        var result0, result1, result2, result3;
        var pos0, pos1;
        
        pos0 = pos;
        result0 = parse_action();
        if (result0 !== null) {
          result1 = [];
          pos1 = pos;
          if (input.substr(pos, 4) === " or ") {
            result2 = " or ";
            pos += 4;
          } else {
            result2 = null;
            if (reportFailures === 0) {
              matchFailed("\" or \"");
            }
          }
          if (result2 === null) {
            if (input.substr(pos, 5) === " and ") {
              result2 = " and ";
              pos += 5;
            } else {
              result2 = null;
              if (reportFailures === 0) {
                matchFailed("\" and \"");
              }
            }
          }
          if (result2 !== null) {
            result3 = parse_action();
            if (result3 !== null) {
              result2 = [result2, result3];
            } else {
              result2 = null;
              pos = pos1;
            }
          } else {
            result2 = null;
            pos = pos1;
          }
          while (result2 !== null) {
            result1.push(result2);
            pos1 = pos;
            if (input.substr(pos, 4) === " or ") {
              result2 = " or ";
              pos += 4;
            } else {
              result2 = null;
              if (reportFailures === 0) {
                matchFailed("\" or \"");
              }
            }
            if (result2 === null) {
              if (input.substr(pos, 5) === " and ") {
                result2 = " and ";
                pos += 5;
              } else {
                result2 = null;
                if (reportFailures === 0) {
                  matchFailed("\" and \"");
                }
              }
            }
            if (result2 !== null) {
              result3 = parse_action();
              if (result3 !== null) {
                result2 = [result2, result3];
              } else {
                result2 = null;
                pos = pos1;
              }
            } else {
              result2 = null;
              pos = pos1;
            }
          }
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos0;
          }
        } else {
          result0 = null;
          pos = pos0;
        }
        return result0;
      }
      
      function parse_action() {
        var result0;
        var pos0;
        
        pos0 = pos;
        if (input.substr(pos, 6) === "viewed") {
          result0 = "viewed";
          pos += 6;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\"viewed\"");
          }
        }
        if (result0 === null) {
          if (input.substr(pos, 4) === "read") {
            result0 = "read";
            pos += 4;
          } else {
            result0 = null;
            if (reportFailures === 0) {
              matchFailed("\"read\"");
            }
          }
          if (result0 === null) {
            if (input.substr(pos, 9) === "collected") {
              result0 = "collected";
              pos += 9;
            } else {
              result0 = null;
              if (reportFailures === 0) {
                matchFailed("\"collected\"");
              }
            }
            if (result0 === null) {
              if (input.substr(pos, 7) === "created") {
                result0 = "created";
                pos += 7;
              } else {
                result0 = null;
                if (reportFailures === 0) {
                  matchFailed("\"created\"");
                }
              }
              if (result0 === null) {
                if (input.substr(pos, 7) === "updated") {
                  result0 = "updated";
                  pos += 7;
                } else {
                  result0 = null;
                  if (reportFailures === 0) {
                    matchFailed("\"updated\"");
                  }
                }
                if (result0 === null) {
                  if (input.substr(pos, 7) === "deleted") {
                    result0 = "deleted";
                    pos += 7;
                  } else {
                    result0 = null;
                    if (reportFailures === 0) {
                      matchFailed("\"deleted\"");
                    }
                  }
                  if (result0 === null) {
                    if (input.substr(pos, 9) === "destroyed") {
                      result0 = "destroyed";
                      pos += 9;
                    } else {
                      result0 = null;
                      if (reportFailures === 0) {
                        matchFailed("\"destroyed\"");
                      }
                    }
                  }
                }
              }
            }
          }
        }
        if (result0 !== null) {
          result0 = (function(offset, actionName) {
          resource.securityMap[actionMap[actionName]] = {};     actionList.push(actionMap[actionName]);
        })(pos0, result0);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_roleList() {
        var result0, result1, result2, result3;
        var pos0, pos1;
        
        pos0 = pos;
        result0 = parse_role();
        if (result0 !== null) {
          result1 = [];
          pos1 = pos;
          if (input.substr(pos, 4) === " or ") {
            result2 = " or ";
            pos += 4;
          } else {
            result2 = null;
            if (reportFailures === 0) {
              matchFailed("\" or \"");
            }
          }
          if (result2 === null) {
            if (input.substr(pos, 5) === " and ") {
              result2 = " and ";
              pos += 5;
            } else {
              result2 = null;
              if (reportFailures === 0) {
                matchFailed("\" and \"");
              }
            }
          }
          if (result2 !== null) {
            result3 = parse_role();
            if (result3 !== null) {
              result2 = [result2, result3];
            } else {
              result2 = null;
              pos = pos1;
            }
          } else {
            result2 = null;
            pos = pos1;
          }
          while (result2 !== null) {
            result1.push(result2);
            pos1 = pos;
            if (input.substr(pos, 4) === " or ") {
              result2 = " or ";
              pos += 4;
            } else {
              result2 = null;
              if (reportFailures === 0) {
                matchFailed("\" or \"");
              }
            }
            if (result2 === null) {
              if (input.substr(pos, 5) === " and ") {
                result2 = " and ";
                pos += 5;
              } else {
                result2 = null;
                if (reportFailures === 0) {
                  matchFailed("\" and \"");
                }
              }
            }
            if (result2 !== null) {
              result3 = parse_role();
              if (result3 !== null) {
                result2 = [result2, result3];
              } else {
                result2 = null;
                pos = pos1;
              }
            } else {
              result2 = null;
              pos = pos1;
            }
          }
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos0;
          }
        } else {
          result0 = null;
          pos = pos0;
        }
        return result0;
      }
      
      function parse_role() {
        var result0, result1;
        var pos0;
        
        pos0 = pos;
        result0 = parse_article();
        if (result0 !== null) {
          result1 = parse_roleName();
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos0;
          }
        } else {
          result0 = null;
          pos = pos0;
        }
        return result0;
      }
      
      function parse_roleName() {
        var result0, result1;
        var pos0;
        
        pos0 = pos;
        result0 = [];
        if (/^[a-z0-9]/.test(input.charAt(pos))) {
          result1 = input.charAt(pos);
          pos++;
        } else {
          result1 = null;
          if (reportFailures === 0) {
            matchFailed("[a-z0-9]");
          }
        }
        while (result1 !== null) {
          result0.push(result1);
          if (/^[a-z0-9]/.test(input.charAt(pos))) {
            result1 = input.charAt(pos);
            pos++;
          } else {
            result1 = null;
            if (reportFailures === 0) {
              matchFailed("[a-z0-9]");
            }
          }
        }
        if (result0 !== null) {
          result0 = (function(offset, roleName) { actionList.forEach(function(_action)
          {   
            resource.securityMap[_action][roleName.join('')] = 1;
          }); 
        })(pos0, result0);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_attributeList() {
        var result0, result1;
        
        result0 = [];
        result1 = parse_attribute();
        while (result1 !== null) {
          result0.push(result1);
          result1 = parse_attribute();
        }
        return result0;
      }
      
      function parse_attribute() {
        var result0, result1, result2, result3;
        var pos0, pos1;
        
        pos0 = pos;
        if (input.charCodeAt(pos) === 10) {
          result0 = "\n";
          pos++;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\"\\n\"");
          }
        }
        if (result0 !== null) {
          result1 = parse_hasA();
          if (result1 !== null) {
            pos1 = pos;
            result2 = parse_attributeName();
            if (result2 !== null) {
              result2 = (function(offset, attributeName) {attribute = {name: attributeName, featureMap: {}}; resource.attributeList.push(attribute); })(pos1, result2);
            }
            if (result2 === null) {
              pos = pos1;
            }
            if (result2 !== null) {
              result3 = parse_which();
              result3 = result3 !== null ? result3 : "";
              if (result3 !== null) {
                result0 = [result0, result1, result2, result3];
              } else {
                result0 = null;
                pos = pos0;
              }
            } else {
              result0 = null;
              pos = pos0;
            }
          } else {
            result0 = null;
            pos = pos0;
          }
        } else {
          result0 = null;
          pos = pos0;
        }
        return result0;
      }
      
      function parse_hasA() {
        var result0;
        
        if (input.substr(pos, 7) === "has an ") {
          result0 = "has an ";
          pos += 7;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\"has an \"");
          }
        }
        if (result0 === null) {
          if (input.substr(pos, 6) === "has a ") {
            result0 = "has a ";
            pos += 6;
          } else {
            result0 = null;
            if (reportFailures === 0) {
              matchFailed("\"has a \"");
            }
          }
        }
        return result0;
      }
      
      function parse_which() {
        var result0, result1;
        var pos0;
        
        pos0 = pos;
        if (input.substr(pos, 7) === " which ") {
          result0 = " which ";
          pos += 7;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\" which \"");
          }
        }
        if (result0 !== null) {
          result1 = parse_featureList();
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos0;
          }
        } else {
          result0 = null;
          pos = pos0;
        }
        return result0;
      }
      
      function parse_featureList() {
        var result0, result1, result2, result3;
        var pos0, pos1;
        
        pos0 = pos;
        result0 = parse_feature();
        if (result0 !== null) {
          result1 = [];
          pos1 = pos;
          if (input.substr(pos, 5) === " and ") {
            result2 = " and ";
            pos += 5;
          } else {
            result2 = null;
            if (reportFailures === 0) {
              matchFailed("\" and \"");
            }
          }
          if (result2 !== null) {
            result3 = parse_feature();
            if (result3 !== null) {
              result2 = [result2, result3];
            } else {
              result2 = null;
              pos = pos1;
            }
          } else {
            result2 = null;
            pos = pos1;
          }
          while (result2 !== null) {
            result1.push(result2);
            pos1 = pos;
            if (input.substr(pos, 5) === " and ") {
              result2 = " and ";
              pos += 5;
            } else {
              result2 = null;
              if (reportFailures === 0) {
                matchFailed("\" and \"");
              }
            }
            if (result2 !== null) {
              result3 = parse_feature();
              if (result3 !== null) {
                result2 = [result2, result3];
              } else {
                result2 = null;
                pos = pos1;
              }
            } else {
              result2 = null;
              pos = pos1;
            }
          }
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos0;
          }
        } else {
          result0 = null;
          pos = pos0;
        }
        return result0;
      }
      
      function parse_feature() {
        var result0, result1;
        var pos0;
        
        pos0 = pos;
        result0 = parse_is();
        if (result0 !== null) {
          result1 = parse_required();
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos0;
          }
        } else {
          result0 = null;
          pos = pos0;
        }
        if (result0 === null) {
          result0 = parse_isNotRequired();
          if (result0 === null) {
            pos0 = pos;
            result0 = parse_hasA();
            if (result0 === null) {
              result0 = parse_has();
            }
            if (result0 !== null) {
              result1 = parse_maxValue();
              if (result1 !== null) {
                result0 = [result0, result1];
              } else {
                result0 = null;
                pos = pos0;
              }
            } else {
              result0 = null;
              pos = pos0;
            }
            if (result0 === null) {
              pos0 = pos;
              result0 = parse_hasA();
              if (result0 === null) {
                result0 = parse_has();
              }
              if (result0 !== null) {
                result1 = parse_minValue();
                if (result1 !== null) {
                  result0 = [result0, result1];
                } else {
                  result0 = null;
                  pos = pos0;
                }
              } else {
                result0 = null;
                pos = pos0;
              }
              if (result0 === null) {
                pos0 = pos;
                result0 = parse_hasA();
                if (result0 !== null) {
                  result1 = parse_maxLength();
                  if (result1 !== null) {
                    result0 = [result0, result1];
                  } else {
                    result0 = null;
                    pos = pos0;
                  }
                } else {
                  result0 = null;
                  pos = pos0;
                }
                if (result0 === null) {
                  pos0 = pos;
                  result0 = parse_hasA();
                  if (result0 !== null) {
                    result1 = parse_minLength();
                    if (result1 !== null) {
                      result0 = [result0, result1];
                    } else {
                      result0 = null;
                      pos = pos0;
                    }
                  } else {
                    result0 = null;
                    pos = pos0;
                  }
                  if (result0 === null) {
                    pos0 = pos;
                    result0 = parse_is();
                    if (result0 !== null) {
                      result1 = parse_type();
                      if (result1 !== null) {
                        result0 = [result0, result1];
                      } else {
                        result0 = null;
                        pos = pos0;
                      }
                    } else {
                      result0 = null;
                      pos = pos0;
                    }
                    if (result0 === null) {
                      pos0 = pos;
                      result0 = parse_has();
                      if (result0 !== null) {
                        result1 = parse_type();
                        if (result1 !== null) {
                          result0 = [result0, result1];
                        } else {
                          result0 = null;
                          pos = pos0;
                        }
                      } else {
                        result0 = null;
                        pos = pos0;
                      }
                      if (result0 === null) {
                        pos0 = pos;
                        result0 = parse_is();
                        if (result0 !== null) {
                          result1 = parse_encrypted();
                          if (result1 !== null) {
                            result0 = [result0, result1];
                          } else {
                            result0 = null;
                            pos = pos0;
                          }
                        } else {
                          result0 = null;
                          pos = pos0;
                        }
                        if (result0 === null) {
                          pos0 = pos;
                          result0 = parse_has();
                          if (result0 !== null) {
                            result1 = parse_allowedValues();
                            if (result1 !== null) {
                              result0 = [result0, result1];
                            } else {
                              result0 = null;
                              pos = pos0;
                            }
                          } else {
                            result0 = null;
                            pos = pos0;
                          }
                          if (result0 === null) {
                            pos0 = pos;
                            result0 = parse_isA();
                            if (result0 !== null) {
                              result1 = parse_indexed();
                              if (result1 !== null) {
                                result0 = [result0, result1];
                              } else {
                                result0 = null;
                                pos = pos0;
                              }
                            } else {
                              result0 = null;
                              pos = pos0;
                            }
                            if (result0 === null) {
                              pos0 = pos;
                              result0 = parse_is();
                              if (result0 !== null) {
                                result1 = parse_searched();
                                if (result1 !== null) {
                                  result0 = [result0, result1];
                                } else {
                                  result0 = null;
                                  pos = pos0;
                                }
                              } else {
                                result0 = null;
                                pos = pos0;
                              }
                              if (result0 === null) {
                                pos0 = pos;
                                result0 = parse_hasA();
                                if (result0 !== null) {
                                  result1 = parse_widget();
                                  if (result1 !== null) {
                                    result0 = [result0, result1];
                                  } else {
                                    result0 = null;
